--- a/lang/de_DE.ini
+++ b/lang/de_DE.ini
@@ -5,7 +5,7 @@ Add_sub = "Unterseite hinzufügen"
 Admin = "Administrator"
 All_blog_posts = "Alle Beiträge"
 Archives = "Archiv"
-Are_you_sure_you_want_to_delete_ = "Sind Sie sicher, daß Sie <strong>%s</strong> löschen wollen?"
+Are_you_sure_you_want_to_delete_ = "Sind Sie sicher, dass Sie <strong>%s</strong> löschen wollen?"
 Audio_post = "Audio-Beitrag"
 Audio_post_comment = "Erstelle einen Beitrag zur Präsentation eines Audios"
 Author = "Autor"
